--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="overlay" data-overlay></div>
 
       <a href="#" class="logo">
-        <img src="./assets/images/logo.svg" width="160" height="50" alt="Footcap logo">
+        <img src="./assets/images/logo.svg" width="160" height="50" alt="tiptop soles">
       </a>
 
       <button class="nav-open-btn" data-nav-open-btn aria-label="Open Menu">
@@ -59,7 +59,7 @@
         </button>
 
         <a href="#" class="logo">
-          <img src="./assets/images/logo.svg" width="190" height="50" alt="Footcap logo">
+          <img src="./assets/images/logo.svg" width="190" height="50" alt="tiptop soles logo">
         </a>
 
         <ul class="navbar-list">
@@ -1368,10 +1368,10 @@
             </li>
 
             <li>
-              <a href="mailto:footcap@help.com" class="footer-link">
+              <a href="mailto:tiptopsoles@help.com" class="footer-link">
                 <ion-icon name="mail"></ion-icon>
 
-                <span class="footer-link-text">footcap@help.com</span>
+                <span class="footer-link-text">tiptopsoles@help.com</span>
               </a>
             </li>
 
@@ -1472,7 +1472,7 @@
             <p class="footer-list-title">Newsletter</p>
 
             <p class="newsletter-text">
-              Authoritatively morph 24/7 potentialities with error-free partnerships.
+              .
             </p>
 
             <form action="" class="newsletter-form">
